--- a/content/post/mybatis/2018-10-08-mapper.md
+++ b/content/post/mybatis/2018-10-08-mapper.md
@@ -1,5 +1,6 @@
 ---
 categories: mybatis
+tags: [mybatis]
 date: "2018-10-08T15:12:22Z"
 description: 通用mapper使用指南
 keywords: 通用mapper,mapper,mybatis
